# user-service-api

./: .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
common/: models.py
core/: asgi.py  settings.py  urls.py  wsgi.py
users/: apps.py  authentication.py  middleware.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
users/assets/: choices.py
users/management/commands/: load_user.py  load_users.py
users/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_alter_customuser_managers_remove_customuser_username_and_more.py  0004_alter_customuser_managers_customuser_username_and_more.py
users/tasks/: sessions.py
users/utils/auth/: token.py
users/utils/location/: client.py
